[package]
name = "rosu-np"
version = "0.5.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = "0.1.5"
reqwest = { version = "0.12.4", features = ["json"] }
semver = "1.0.23"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.0"
twitch-irc = "5.0.1"
ron = "0.8.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
